CLEANFILES = \
	*~

MAINTAINERCLEANFILES = Makefile.in

if EOS_ENABLE_PYTHON

bin_SCRIPTS = \
	eos-list-references \
	eos-make-constraint \
	eos-merge-mcmc \
	eos-plot \
	eos-plot-1d \
	eos-plot-2d \
	eos-print-modes \
	eos-print-uncertainty

endif

EXTRA_DIST = \
	eos-list-references \
	eos-make-constraint \
	eos-merge-mcmc \
	eos-plot \
	eos-plot-1d \
	eos-plot-2d \
	eos-print-modes \
	eos-print-uncertainty
